test_suite/tests/ui/fail/invalid_attr_value_for_option/invalid_option_requires_assign.rs
use clapi::macros::*;

#[command]
#[option(x, requires_assign="xyz")]
fn app(x: i64){}

fn main(){}