test_suite/tests/ui/fail/invalid_attr_value_for_option/invalid_option_requires_assign.stderr
error: custom attribute panicked
 --> $DIR/invalid_option_requires_assign.rs:3:1
  |
3 | #[command]
  | ^^^^^^^^^^
  |
  = help: message: option `requires_assign` must be a bool literal
